Fix oversized gifs on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -984,6 +984,11 @@ textarea {
   display: none;
 }
 
+.figure img {
+  position: relative;
+  width: 100%;
+}
+
 @media only screen and (min-width: 601px) {
   #profile-pic {
     width: 80%;
